# redact-client

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  pyproject.toml
.github/: workflows
.github/workflows/: build.yml  flake8.yml  format.yml  linting.yml  pytest.yml
ips_client/: __init__.py  __main__.py  data_models.py  ips_api_wrapper.py  ips_async_requests.py  ips_data_models.py  ips_instance.py  ips_job.py  ips_requests.py  ips_wrapper.py  job.py  settings.py  utils.py
ips_client/tools/: anonymize_file.py  anonymize_folder.py  utils.py
redact/: __init__.py  __main__.py  api_versions.py  data_models.py  errors.py  main.py  redact_instance.py  redact_job.py  redact_requests.py  settings.py  utils.py
redact/commons/: summary.py  utils.py
redact/tools/: redact_file.py  redact_folder.py  summary.py  utils.py  v3.py  v4.py
redact/v3/: __init__.py  data_models.py  redact_instance.py  redact_job.py  redact_requests.py  utils.py
redact/v4/: __init__.py  data_models.py  redact_instance.py  redact_job.py  redact_requests.py  utils.py
redact_client/: __init__.py  __main__.py  data_models.py  job.py  redact_instance.py  redact_requests.py
redact_client/tools/: anonymize_file.py  anonymize_folder.py
scripts/: anonymize_file.py  anonymize_folder.py  requirements.txt  utils.py
src/: ips_job.py
tests/: .test.env  conftest.py  obama.json  requirements.txt  test_anonymize_folder.py  test_cli.py  test_custom_labels.py  test_custom_stamp.py  test_ips_async_requests.py  test_ips_job.py  test_ips_requests.py  test_ips_wrapper.py  test_subscription_key.py  test_utils.py
tests/commons/: test_utils.py
tests/functional/: conftest.py  test_anonymize_folder.py  test_custom_labels.py  test_custom_stamp.py  test_ips_job.py  test_ips_requests.py  test_redact_folder.py  test_redact_job.py  test_redact_requests.py  test_subscription_key.py  test_warnings.py
tests/integration/: mock_server.py  requirements.txt  test_anonymize_folder.py  test_requests.py
tests/tools/: test_utils.py
tests/unit/: test_utils.py
tests/v3/: conftest.py
(+30 files in other folders)
