[tool.poetry]
name = "redact-client"
version = "4.9.0"
description = "Command-line and Python client for Brighter AI's Redact"
authors = ["brighter AI <dev@brighter.ai>"]
license = "MIT License"
packages = [
    { include = "redact" },
]

[tool.poetry.dependencies]
python = "^3.8"
httpcore = "^0.15.0"
httpx = "^0.23.0"
pydantic = "^1.8.2"
tqdm = "^4.60.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Pillow = "^9.2.0"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
pytest-timeout = "^2.1.0"
flake8 = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
