[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
redact_file = "redact.__main__:redact_file_entry_point"
redact_folder = "redact.__main__:redact_folder_entry_point"

[tool.flit.metadata]
module = "redact"
author = "brighter AI"
author-email = "dev@brighter.ai"
home-page = "https://github.com/brighter-ai"
requires-python = ">=3.7"
requires = [
  "httpx~=0.23.0",
  "pydantic~=1.9.1",
  "tqdm~=4.64.0",
  "typer~=0.6.1",
]
